@@ -27,3 +27,15 @@
   deprecated_function_calls,
   deprecated_functions
  ]}.
+
+{profiles,
+ [{test,
+   [{erl_opts,
+     [debug_info,
+      nowarn_export_all,
+      nowarn_missing_spec,
+      nowarnings_as_errors,
+      {d, 'SKIP_BROKEN_TEST_CASES'}
+     ]}
+   ]}
+ ]}.
