@@ -3,6 +3,7 @@ Version ?:
 * missing boot dependencies were added
 * application version is now determined from git
 * clearer test case failures
+* improved test coverage by skipping tests that have been broken since time immemorial
 
 Version ?:
 * Add support for connect_options
